--- a/index.css
+++ b/index.css
@@ -70,17 +70,12 @@ body {
     margin: 0 auto;
 }
 
-h3 {
-    margin: 20px 0 8px 0;
+h1 {
+    margin-bottom: 8px;
 }
 
 a {
     color: green;
     font-weight: 500;
     text-decoration: none;
-}
-
-.scroll-to-top {
-    text-align: center;
-    margin: 16px 0;
 }
