--- a/ass-05/wp-pusher.css
+++ b/ass-05/wp-pusher.css
@@ -66,12 +66,16 @@ h6 {
 body {
     font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', 
     Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
 
 header {
     display: flex;
     padding: 16px 0px;
-    width: 95%;
+    width: 98%;
     margin: 0 auto;
 }
 
@@ -87,7 +91,7 @@ img[alt = "wp-pusher-logo"] {
 
 hr {
     border: 1px solid #1e1e1e;
-    width: 95%;
+    width: 98%;
     margin: 0 auto;
 }
 
@@ -106,6 +110,24 @@ hr {
 
 #account {
     padding: 8px 16px;
-    border: 3px solid #1D2C3C;
+    border: 2px solid #1D2C3C;
     border-radius: 8px;
+}
+
+/* main {
+    width: 892px;
+    height: 795px;
+    background-color: #548BC5;
+    margin: 0 auto;
+} */
+
+footer {
+    margin-top: auto;
+    margin-bottom: 16px;
+    text-align: center;
+}
+
+a {
+    text-decoration: none;
+    color: #548BC5;
 }
