--- a/ass-05/wp-pusher.css
+++ b/ass-05/wp-pusher.css
@@ -64,8 +64,8 @@ h6 {
 
 /* author's styles */
 body {
-    font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', 
-    Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+        Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
     display: flex;
     flex-direction: column;
@@ -74,7 +74,7 @@ body {
 
 header {
     display: flex;
-    padding: 16px 0px;    
+    padding: 16px 0px;
     margin: 0 auto;
 }
 
@@ -82,7 +82,7 @@ header {
     margin-right: auto;
 }
 
-img[alt = "wp-pusher-logo"] {
+img[alt="wp-pusher-logo"] {
     width: 200px;
     height: auto;
     cursor: pointer;
@@ -93,7 +93,8 @@ hr {
     margin: 0 auto;
 }
 
-header, hr {
+header,
+hr {
     width: 70%;
 }
 
@@ -102,12 +103,15 @@ header, hr {
     gap: 24px;
 }
 
-.right-section > button {
+button {
+    cursor: pointer;
+}
+
+.right-section>button {
     color: #1D2C3C;
     font-weight: 700;
     border: none;
     background-color: transparent;
-    cursor: pointer;
 }
 
 #account {
@@ -150,7 +154,8 @@ main {
     font-weight: 800;
 }
 
-#price sup, #price span {
+#price sup,
+#price span {
     font-size: 1rem;
 }
 
@@ -198,6 +203,101 @@ img[alt="kirk beard"] {
     width: 50px;
     height: auto;
     border-radius: 50%;
+}
+
+.left-checkout-section {
+    padding: 36px;
+}
+
+.divider {
+    border: 2px solid #F5F7FA;
+    margin: 36px -36px;
+}
+
+.divider2 {
+    border: 1px solid #FFFFFF;
+    width: 100%;
+    margin: 36px 0;
+    align-self: center;
+}
+
+.circled-num {
+    color: #548BC5;
+    padding: 7px 14px;
+    border-radius: 50%;
+    border: 2px solid #548BC5;
+}
+
+form {
+    display: flex;
+    gap: 16px;
+    flex-wrap: wrap;
+}
+
+.form-headers {
+    margin: 18px 0px;
+}
+
+.form-entries {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    width: 45%;
+}
+
+#email-wrapper {
+    width: 80%;
+}
+
+input {
+    background-color: #EDEFF2;
+    padding: 6px 12px;
+    border: none;
+    border-radius: 4px;
+}
+
+.cc {
+    width: auto;
+}
+
+.card-credentials {
+    display: flex;
+}
+
+#card-number {
+    flex: auto;
+}
+
+#card-expiry,
+#card-cvc {
+    width: 100px;
+}
+
+#buy-wp {
+    padding: 16px 0px;
+    width: 100%;
+    background-color: #038E7D;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    font-weight: 700;
+    margin-bottom: 24px;
+}
+
+#help {
+    text-align: center;
+}
+
+.support {
+    color: #888a8d;
+    font-weight: 500;
+}
+
+.round-mark {
+    color: #548BC5;
+    padding: 2px 8px;
+    border-radius: 50%;
+    border: 2px solid #548BC5;
 }
 
 footer {
