--- a/index.css
+++ b/index.css
@@ -66,8 +66,11 @@ h6 {
 body {
     font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', 
     Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    width: 30vw;
-    margin: 0 auto;
+    color: #1e1e1e;
+    height: 100vh;
+
+    display: flex;
+    flex-direction: column;
 }
 
 h1 {
@@ -78,4 +81,19 @@ a {
     color: green;
     font-weight: 500;
     text-decoration: none;
+}
+
+main {
+    width: 30vw;
+    margin: 0 auto;
+}
+
+footer {
+    margin-top: auto;
+    padding: 16px;
+    color: wheat;
+    background-color: #1e1e1e;
+    font-weight: 600;
+    font-size: 1.5rem;
+    text-align: center;
 }
