--- a/ass-06/scissors.css
+++ b/ass-06/scissors.css
@@ -155,3 +155,59 @@ img[alt="swoosh"] {
     border-radius: 30px;
     background-color: rgba(255, 255, 255, 0.829);
 }
+
+#moar-product-info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 140px;
+    margin-top: 48px;
+    background-color: rgba(255, 255, 255, 0.829);
+}
+
+.product-metrics {
+    display: flex;
+    gap: 100px;
+}
+
+.tagline {
+    font-size: 2.5rem;
+    font-weight: 600;
+}
+
+.metric-wrapper {
+    font-size: 1.5rem;
+}
+
+.metric-nums {
+    font-weight: 600;
+}
+
+#why-scissors {
+    display: flex;
+    justify-content: space-evenly;
+    /* gap: 36px; */
+    margin: 0 auto;
+    margin-top: 120px;
+}
+
+#why-points-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 48px;
+}
+
+.why-points {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.why-points > img {
+    width: 25px;
+    height: auto;
+}
+
+#why-text > p, .why-points > p {
+    font-size: 1.5rem;
+}
