--- a/ass-06/scissors.css
+++ b/ass-06/scissors.css
@@ -171,24 +171,20 @@ img[alt="swoosh"] {
 }
 
 .tagline {
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: 600;
-}
-
-.metric-wrapper {
-    font-size: 1.5rem;
 }
 
 .metric-nums {
     font-weight: 600;
+    font-size: 2rem;
 }
 
 #why-scissors {
     display: flex;
     justify-content: space-evenly;
     /* gap: 36px; */
-    margin: 0 auto;
-    margin-top: 120px;
+    margin: 100px auto;
 }
 
 #why-points-container {
@@ -204,10 +200,88 @@ img[alt="swoosh"] {
 }
 
 .why-points > img {
-    width: 25px;
+    width: 50px;
     height: auto;
+    padding: 8px;
+    border-radius: 100%;
+    background-color: rgba(50, 132, 255, 0.13);
 }
 
-#why-text > p, .why-points > p {
-    font-size: 1.5rem;
+#why-text > p {
+    margin-top: 8px;
+}
+
+#price-perfect {
+    text-align: center;
+}
+
+#pricing {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin: 48px 0px;
+}
+
+.pricing-cards {
+    border: 1px solid #0065FE;
+    max-height: 300px;
+    border-radius: 12px;
+    padding: 48px;
+    padding-top: 8px;
+    padding-bottom: 16px;
+}
+
+ul {
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+li {
+    list-style: none;
+}
+
+.pricing-cards > p {
+    margin-bottom: 8px;
+}
+
+.plan {
+    margin-bottom: 16px;
+}
+
+#professional-plan {
+    border: none;
+    background-color: #1E3448;
+    color: white;
+    min-height: 400px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#basic-plan {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    border-right: 0;
+}
+
+#team-plan { 
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-left: 0;
+}
+
+#get-pricing {
+    display: flex;
+    justify-content: center;
+    gap: 8px;
+    margin-bottom: 72px;
+}
+
+.custom-price {
+    color: #0065FE;
+    background-color: white;
 }
