--- a/ass-06/scissors.css
+++ b/ass-06/scissors.css
@@ -342,4 +342,28 @@ input:focus, select:focus {
 
 .faqs > h1 {
     text-align: center;
+    margin-bottom: 36px;
+}
+
+.faqs {
+    width: 792px;
+    margin: 0 auto;
+
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.faqs-list {
+    display: flex;
+    font-size: 18px;
+    margin-top: 18px;
+}
+
+.question {
+    margin-right: auto;
+}
+
+#dropdown {
+    cursor: pointer;
 }
